tests/error/py_errors/load_tket2_not_installed.err
Error: Tket2 not installed (at $FILE:14:0)
   | 
12 | module.load(qubit)
13 | 
14 | guppy.load_pytket("guppy_circ", circ, module)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Experimental pytket compatibility requires `tket2` to be
   |                                               installed

Help: Install tket2: `pip install tket2`

Guppy compilation failed due to 1 previous error
